ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-06-03 Benedikt Heintel
	- TOOLS:
		* Updated net2ftp to version 0.97
		* Updates SquirrelMail to version 1.4.15

2008-06-03 Benedikt Heintel
	- GUI:
		* Fixed #1330: In admin/manage_sessions.php {ADMIN_USERNAME} is not replaced

2008-06-02 Benedikt Heintel
	- ENGINE:
		* Fixed #1329: some typos in the engine perl files
	- GUI:
		* Fixed #1327: No switch back as admin when logged as reseller
		* Fixed #1328: updated all language files to fit the change in the translation strings where "can not" was replaced with "cannot"

2008-06-01 Benedikt Heintel
	- LANGUAGES:
		* Fixed #1322: (german) updated german language file
	- DISTS:
		* Fixed #1324: (freebsd) fix freebsd awstats and cronjob

2008-05-29 Jochen Manz
	- GUI:
		* Fixed #1323: some better web accessability - (Part 2); removed doubled javascript code
		* Fixed #1321: tiny layout fix for some khtml/webkit based browsers

2008-05-30 Benedikt Heintel
	- GUI:
		* Fixed #1317: updated language files
		* Fixed #1318: tiny typo in client/ftp_choose_dir.php translation string
		* Fixed #1319: some more german translation updates, especially for the emails

2008-05-29 Jochen Manz
	- GUI:
		* Fixed #1271: MAIL ALIAS (forward adress) MALFUNCTIONS
	- ENGINE:
		* Fixed #824: IMAP SSL Traffic not counted


2008-05-29 Benedikt Heintel
	- GUI:
		* Fixed #1313: valid HTML fixes; updated german translation; added translation string "Hosting plans available for"
		* Fixed #1314: in admin|reseller/lostpassword.php the variable {BASE_SERVER_VHOST} is not listed in the legend
		* Fixed #1315: tiny fix for whitespace in backup.php|.tpl
		* Fixed #1316: empty variables for log

2008-05-28 Benedikt Heintel
	- DOCS:
		* Changed Debian INSTALL
		* Changed Ubuntu INSTALL
		* Updated Debian packages for Lenny
		* Updated Ubuntu packages for Hardy Heron
	- GUI:
		* Fixed #1305: some german language updates and typo